examples/test/testpolicy17942.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17942
  namespace: namespace161
spec:
  podSelector:
    matchLabels:
      key6: value4
      key32: value21
      key12: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value5
          key2: value2
          key35: value1
      podSelector:
        matchLabels:
          key30: value24
          key26: value3
          key5: value14
